--- a/templates/all_parts.html
+++ b/templates/all_parts.html
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body>
-    <h1>Список деталей</h1>
+
 
     <a href="/" style="display: inline-block; padding: 10px 20px; background-color: #167003; color: white; text-decoration: none; border-radius: 4px; margin-bottom: 20px;">
         Главная
@@ -42,6 +42,10 @@
 
     <a href="/parts/new_part" style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 4px; margin-bottom: 20px;">
         Добавить деталь
+    </a>
+
+    <a href="/logout" style="display: inline-block; padding: 10px 20px; background-color: #167003; color: white; text-decoration: none; border-radius: 4px; margin-bottom: 20px;">
+        Выйти
     </a>
 
     <table border="1" style="width: 100%; border-collapse: collapse;">
