--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -116,7 +116,7 @@
             </div>
             {% endif %}
 
-            <form method="POST" action="{{ url_for('login') }}">
+            <form method="POST" action="{{ url_for('auth.login') }}">
                 <div class="form-group">
                     <label for="username">Логин:</label>
                     <input type="text" id="username" name="username" required>
